# gRPCUsage

./: LICENSE  README.md
myExamples/RRUClientSimulator/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  proto.cmake
myExamples/RRUClientSimulator/src/: Makefile  cmake_install.cmake
myExamples/RRUClientSimulator/src/client/: CMakeLists.txt  Makefile  client_simulator.c  cmake_install.cmake
myExamples/RRUClientSimulator/src/client/RRUOperations/: CMakeLists.txt  Makefile  cmake_install.cmake  rru_operations.cc
myExamples/RRUClientSimulator/src/client/include/: greeter_client_headers.h  rru_operations.h
myExamples/RRUClientSimulator/src/server/: CMakeLists.txt  Makefile  cmake_install.cmake
myExamples/helloRRU/: CMakeLists.txt  README.md
myExamples/helloRRU/src/client/: greeter_client_functions.cc
myExamples/helloRRU/src/server/: greeter_server.cc
protos/: README.md
